Fixed the path for the nth time!

--- a/viewer.html
+++ b/viewer.html
@@ -117,7 +117,7 @@ function parseUri(){
 		gist = {
 			"owner": owner,
 			"description": description,
-			"image_path": githubBase + "/" + data.image_path,
+			"image_path": githubBase + "/" + data.ghimg,
 			"download_path": githubBase + "/" + data.file,
 			"readme_path": githubBase + "/README.md",
 			"num_downloads":0,
