--- a/viewer.html
+++ b/viewer.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="/lib/style.css">
     <script src="./lib/d3.min.js"></script>
 	<script src="./lib/highlight.min.js"></script>
-	<script src="/lib/jquery-1.11.3.min.js"></script>
+	<script src="./lib/jquery-1.11.3.min.js"></script>
 	<!-- libraries for share this -->
 	<script type="text/javascript">var switchTo5x=true;</script>
 	<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
