--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
 </div>
 
 <footer>
-  about <a href="https://github.com/HydraShare/hydra/wiki">https://github.com/HydraShare/hydra/wiki</a>
+  <br>
+  Do you want to share your files with the world! <a href="https://github.com/HydraShare/hydra/wiki"> Read here. We made it very easy for you. </a>
 </footer>
 
 <body>
