--- a/viewer.html
+++ b/viewer.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Hydra Viewer</title>
-	<link rel="icon" type="image/x-icon" href="/lib/favicon.ico">
-	<link rel="stylesheet" type="text/css" href="/lib/style.css">
+	<link rel="icon" type="image/x-icon" href="./lib/favicon.ico">
+	<link rel="stylesheet" type="text/css" href="./lib/style.css">
     <script src="./lib/d3.min.js"></script>
 	<script src="./lib/highlight.min.js"></script>
 	<script src="./lib/jquery-1.11.3.min.js"></script>
@@ -66,7 +66,7 @@ function parseUri(){
 		example = {
 			"owner": owner,
 			"description": description,
-			"fork_path": "github.com/" + owner + "/hydra/tree/master/" + description,
+			"fork_path": "http://www.github.com/" + owner + "/hydra/tree/master/" + description,
 			"image_path": githubBase + "/" + data.ghimg,
 			"download_path": githubBase + "/" + data.file,
 			"readme_path": githubBase + "/README.md",
@@ -143,6 +143,7 @@ function generateContent(){
 				// reenable the inputs
 				$inputs.prop("disabled", false);
 			});
+			
 			// prevent default posting of form
 			event.preventDefault();
 		});
