https for sharethis
this is a quick fix for those with https checking

--- a/viewer.html
+++ b/viewer.html
@@ -11,6 +11,7 @@
 	<!-- libraries for share this -->
 	<script type="text/javascript">var switchTo5x=true;</script>
 	<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+	<script type="text/javascript" src="https://w.sharethis.com/button/buttons.js"></script>
 	<script type="text/javascript">stLight.options({publisher: "8146e8ed-b6ac-46c1-a80d-3d5c4ba828e3", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
 </head>
 
