Temporary removed versioning

--- a/viewer.html
+++ b/viewer.html
@@ -53,7 +53,8 @@
 	<span class='st_linkedin_hcount' displayText='LinkedIn'></span>
 	<span class='st_googleplus_hcount' displayText='Google +'></span>
 	
-	<select id="versions" style = "float:right"> </select>
+	<!-- <select id="versions" style = "float:right"> </select> -->
+	
 	<button id="zoomtoextents" style="float:right" type="button">ZoomToExtent</button>
 </div>
 <br>
@@ -190,7 +191,8 @@ function generateContent(){
 
         }
     }
-            
+
+	/*            
 	// add versions
 
 	// add options based on input and outputs
@@ -209,6 +211,8 @@ function generateContent(){
         //console.log(version);
         // image, description and change log needs to be updated
     })
+
+	*/
 
 	// script for zooming and panning .png images
 	var imgWidth = 960,imgHeight = 480,		// Image dimensions (don't change these)
