update input based on keywords
It should also be implemented backward i.e. once user searches for
something the uri should be updated so it can be shared. I need to
change ? to hash to take advantage of inbuilt functionality

--- a/index.html
+++ b/index.html
@@ -58,11 +58,17 @@
             keyValue = d.split("=");
             inputParameters[keyValue[0].toLowerCase()].push(decodeURIComponent(keyValue[1]));
         })
-
+        
         keywords = inputParameters.keywords;
     }
 
     parseUri();
+
+    // update value in text box
+    if (keywords.length != 0){
+        // d3 equivalent didn't work!
+        document.getElementById("filtering").value = keywords.join(", ");
+    }
 
     function getSamples(){
         var members = {};
